force-app/main/default/objects/PackingSlip__c/PackingSlip__c.object-meta.xml
<CustomObject>
    <label>Packing Slip</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Packing Slip #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packing Slips</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>