force-app/main/default/objects/PackingSlip__c/fields/AttentionContact__c.field-meta.xml
<CustomField>
    <fullName>AttentionContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Att. Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Packing Slips</relationshipLabel>
    <relationshipName>PackingSlips</relationshipName>
    <type>Lookup</type>
</CustomField>