force-app/main/default/objects/PackingSlip__c/fields/BoxDepth__c.field-meta.xml
<CustomField>
    <fullName>BoxDepth__c</fullName>
    <label>Box Depth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>