force-app/main/default/objects/PackingSlip__c/fields/BoxHeight__c.field-meta.xml
<CustomField>
    <fullName>BoxHeight__c</fullName>
    <label>Box Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>