force-app/main/default/objects/PackingSlip__c/fields/BoxWeight__c.field-meta.xml
<CustomField>
    <fullName>BoxWeight__c</fullName>
    <label>Box Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>