force-app/main/default/objects/PackingSlip__c/fields/BoxWeightUnitType__c.field-meta.xml
<CustomField>
    <fullName>BoxWeightUnitType__c</fullName>
    <label>Box Weight Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetName>WeightUnitType</valueSetName>
    </valueSet>
</CustomField>