force-app/main/default/objects/PackingSlip__c/fields/BoxWidth__c.field-meta.xml
<CustomField>
    <fullName>BoxWidth__c</fullName>
    <label>Box Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>