force-app/main/default/objects/PackingSlip__c/fields/DeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddress__c</fullName>
    <formula>DeliveryGroup__r.DeliveryAddressHtml__c</formula>
    <label>Delivery Address</label>
    <type>Text</type>
</CustomField>