force-app/main/default/objects/PackingSlip__c/fields/DeliveryCost__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCost__c</fullName>
    <label>Delivery Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>