force-app/main/default/objects/PackingSlip__c/fields/DeliveryGroup__c.field-meta.xml
<CustomField>
    <fullName>DeliveryGroup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Delivery Group</label>
    <referenceTo>DeliveryGroup__c</referenceTo>
    <relationshipLabel>Packing Slips</relationshipLabel>
    <relationshipName>PackingSlips</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>