force-app/main/default/objects/PackingSlip__c/fields/PickupAddress__c.field-meta.xml
<CustomField>
    <fullName>PickupAddress__c</fullName>
    <formula>DeliveryGroup__r.PickupAddressHtml__c</formula>
    <label>Pickup Address</label>
    <type>Text</type>
</CustomField>