force-app/main/default/objects/PackingSlip__c/fields/TotalPackedQty__c.field-meta.xml
<CustomField>
    <fullName>TotalPackedQty__c</fullName>
    <label>Total Packed Qty</label>
    <summarizedField>PackingSlipItem__c.Quantity__c</summarizedField>
    <summaryForeignKey>PackingSlipItem__c.PackingSlip__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>